--- a/app/src/main/res/layout/flip_card.xml
+++ b/app/src/main/res/layout/flip_card.xml
@@ -63,7 +63,7 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="@id/cl4_tv7" />
 
-        <com.makeramen.roundedimageview.RoundedImageView
+        <ImageView
             android:id="@+id/card1_copy"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -74,10 +74,10 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/cl4_tv7"
-            app:riv_corner_radius="10dp" />
+            />
 
 
-        <com.makeramen.roundedimageview.RoundedImageView
+        <ImageView
             android:id="@+id/card1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -89,9 +89,9 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/cl4_tv7"
-            app:riv_corner_radius="10dp" />
+            />
 
-        <com.makeramen.roundedimageview.RoundedImageView
+        <ImageView
             android:id="@+id/card2_copy"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -101,9 +101,9 @@
             android:transitionName="transition_image"
             app:layout_constraintLeft_toRightOf="@id/card1"
             app:layout_constraintTop_toBottomOf="@id/cl4_tv7"
-            app:riv_corner_radius="10dp" />
+            />
 
-        <com.makeramen.roundedimageview.RoundedImageView
+        <ImageView
             android:id="@+id/card2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -113,10 +113,10 @@
             android:transitionName="transition_image"
             app:layout_constraintLeft_toRightOf="@id/card1"
             app:layout_constraintTop_toBottomOf="@id/cl4_tv7"
-            app:riv_corner_radius="10dp" />
+            />
 
 
-        <com.makeramen.roundedimageview.RoundedImageView
+        <ImageView
             android:id="@+id/card3_copy"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -126,9 +126,9 @@
             android:transitionName="transition_image"
             app:layout_constraintLeft_toRightOf="@id/card2"
             app:layout_constraintTop_toBottomOf="@id/cl4_tv7"
-            app:riv_corner_radius="10dp" />
+            />
 
-        <com.makeramen.roundedimageview.RoundedImageView
+        <ImageView
             android:id="@+id/card3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -138,7 +138,7 @@
             android:transitionName="transition_image"
             app:layout_constraintLeft_toRightOf="@id/card2"
             app:layout_constraintTop_toBottomOf="@id/cl4_tv7"
-            app:riv_corner_radius="10dp" />
+            />
 
         <!--<androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view3"
