--- a/app/src/main/res/layout/fourth.xml
+++ b/app/src/main/res/layout/fourth.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_marginBottom="10dp"
     android:layout_marginLeft="5dp"
     android:layout_marginRight="4dp"
@@ -11,8 +11,8 @@
 
     <ImageView
         android:id="@+id/iv_image"
-        android:layout_width="158dp"
-        android:layout_height="158dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:src="@drawable/falls1"
         android:scaleType="fitXY"
         android:layout_marginBottom="10dp"
