--- a/app/src/main/res/layout/fourth.xml
+++ b/app/src/main/res/layout/fourth.xml
@@ -11,7 +11,7 @@
 
     <ImageView
         android:id="@+id/iv_image"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:src="@drawable/falls1"
         android:scaleType="fitXY"
