--- a/app/src/main/res/layout/components.xml
+++ b/app/src/main/res/layout/components.xml
@@ -2,41 +2,27 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:background="#0A000000"
+    android:layout_margin="5dp"
+    android:background="@drawable/shape_rectangle6"
     android:layout_height="wrap_content">
 
-    <LinearLayout
+
+    <ImageView
+        android:id="@+id/item_image"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:src="@drawable/jetpack"
+        android:layout_gravity="center"/>
+
+
+    <TextView
+        android:id="@+id/item_title"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="vertical">
-
-        <ImageView
-            android:id="@+id/item_image"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:src="@drawable/jetpack"
-            android:layout_gravity="center"/>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center_vertical"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/item_title"
-                android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:gravity="center"
-                android:text="哈密瓜"
-                android:textSize="10dp"
-                android:textColor="#000000"/>
-
-
-        </LinearLayout>
-
-    </LinearLayout>
+        android:layout_height="30dp"
+        android:gravity="center"
+        android:text="哈密瓜"
+        android:textSize="10dp"
+        android:textColor="#000000"/>
 
     <View
         android:layout_width="match_parent"
