--- a/app/src/main/res/layout/fourth.xml
+++ b/app/src/main/res/layout/fourth.xml
@@ -14,6 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:src="@drawable/falls1"
+        android:adjustViewBounds="true"
         android:scaleType="fitXY"
         android:layout_marginBottom="10dp"
         app:layout_constraintLeft_toLeftOf="parent"
