--- a/app/src/main/res/layout/helper.xml
+++ b/app/src/main/res/layout/helper.xml
@@ -2,46 +2,29 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:paddingRight="10dp"
-    android:background="#0A000000"
+    android:background="@drawable/shape_rectangle6"
     android:layout_margin="10dp"
     android:paddingLeft="10dp"
     android:layout_height="wrap_content">
 
-    <LinearLayout
+    <ImageView
+        android:id="@+id/item_image"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:src="@drawable/jetpack"
+        android:layout_gravity="center"/>
+
+    <TextView
+        android:id="@+id/item_title"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="vertical">
-
-        <ImageView
-            android:id="@+id/item_image"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:src="@drawable/jetpack"
-            android:layout_gravity="center"/>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center_vertical"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/item_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:singleLine="true"
-                android:maxLength="10"
-                android:ellipsize="end"
-                android:text="哇哈哈"
-                android:textSize="18dp"
-                android:textStyle="bold"
-                android:textColor="#000000"/>
-
-        </LinearLayout>
-
-    </LinearLayout>
+        android:layout_height="wrap_content"
+        android:singleLine="true"
+        android:maxLength="10"
+        android:ellipsize="end"
+        android:text="哇哈哈"
+        android:textSize="18dp"
+        android:textStyle="bold"
+        android:textColor="#000000"/>
 
     <View
         android:layout_width="match_parent"
