--- a/app/src/main/res/layout/custom_tab_view.xml
+++ b/app/src/main/res/layout/custom_tab_view.xml
@@ -18,6 +18,11 @@
         android:id="@+id/tab_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:autoSizeTextType="uniform"
+        android:autoSizeMinTextSize="8sp"
+        android:autoSizeMaxTextSize="20sp"
+        android:autoSizeStepGranularity="1sp"
+        android:singleLine="true"
         android:textSize="12sp"
         android:textColor="#000000"
         android:gravity="center"/>
