--- a/app/src/main/res/layout/components_fragment.xml
+++ b/app/src/main/res/layout/components_fragment.xml
@@ -28,13 +28,20 @@
 
 
 
-    <androidx.recyclerview.widget.RecyclerView
+    <com.example.myapplication.RecyclerViewAtViewPager2
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
         app:layout_constraintLeft_toLeftOf="parent"
         />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="71dp"
+        app:layout_constraintTop_toBottomOf="@id/recyclerView"
+        app:layout_constraintLeft_toLeftOf="parent "
+        />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
