--- a/app/src/main/res/layout/activity_flip_page.xml
+++ b/app/src/main/res/layout/activity_flip_page.xml
@@ -1,9 +1,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/fl">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fl"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/beam"
@@ -20,32 +20,32 @@
         android:id="@+id/card"
         android:layout_width="97dp"
         android:layout_height="98dp"
+        android:scaleType="fitCenter"
         android:transitionName="transition_image"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:scaleType="fitCenter" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/card3"
         android:layout_width="39dp"
         android:layout_height="39dp"
         android:layout_marginTop="115dp"
-        app:layout_constraintTop_toBottomOf="@id/card"
+        android:scaleType="fitCenter"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:scaleType="fitCenter" />
+        app:layout_constraintTop_toBottomOf="@id/card" />
 
     <ImageView
         android:id="@+id/card4"
         android:layout_width="match_parent"
         android:layout_height="84dp"
         android:layout_marginBottom="122dp"
+        android:scaleType="fitCenter"
         app:layout_constraintBottom_toTopOf="@id/card3"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:scaleType="fitCenter" />
+        app:layout_constraintRight_toRightOf="parent" />
 
     <ImageView
         android:id="@+id/card5"
@@ -54,29 +54,27 @@
         android:layout_marginBottom="58dp"
         app:layout_constraintBottom_toTopOf="@id/card3"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-         />
+        app:layout_constraintRight_toRightOf="parent" />
 
     <ImageView
         android:id="@+id/card6"
         android:layout_width="104dp"
         android:layout_height="12dp"
         android:layout_marginBottom="30dp"
+        android:scaleType="fitCenter"
         app:layout_constraintBottom_toTopOf="@id/card3"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:scaleType="fitCenter" />
+        app:layout_constraintRight_toRightOf="parent" />
 
 
     <ImageView
         android:id="@+id/bottom"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:src="@drawable/cheer"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:src="@drawable/cheer" />
-
+        app:layout_constraintRight_toRightOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
