--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:orientation="vertical">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#0097ff"
-        >
-    </androidx.appcompat.widget.Toolbar>
+        android:background="#0097ff"></androidx.appcompat.widget.Toolbar>
+
     <LinearLayout
         android:id="@+id/layout"
         android:layout_width="match_parent"
@@ -25,7 +24,6 @@
             android:layout_weight="1"
             android:orientation="horizontal" />
 
-
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabLayout"
             android:layout_width="match_parent"
@@ -36,10 +34,6 @@
             app:tabIndicatorHeight="0dp"
             app:tabMaxWidth="200dp"
             app:tabMinWidth="100dp"
-            app:tabMode="fixed"/>
-
-
-
+            app:tabMode="fixed" />
     </LinearLayout>
-
 </LinearLayout>
