--- a/app/src/main/res/layout/activity_sixth.xml
+++ b/app/src/main/res/layout/activity_sixth.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Sixth"
         android:layout_gravity="center"
+        android:background="@color/design_default_color_secondary_variant"
         android:gravity="center"
-        android:textSize="24sp"
-        android:background="@color/design_default_color_secondary_variant"/>
+        android:text="Sixth"
+        android:textSize="24sp" />
 
 </LinearLayout>
