--- a/app/src/main/res/layout/components.xml
+++ b/app/src/main/res/layout/components.xml
@@ -1,19 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:layout_margin="10dp"
     android:background="@drawable/shape_rectangle6"
-    android:layout_height="wrap_content">
-
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/itemImage"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:src="@drawable/jetpack"
-        android:layout_gravity="center"/>
-
+        android:layout_gravity="center"
+        android:src="@drawable/jetpack" />
 
     <TextView
         android:id="@+id/itemTitle"
@@ -21,12 +19,12 @@
         android:layout_height="30dp"
         android:gravity="center"
         android:text="哈密瓜"
-        android:textSize="10dp"
-        android:textColor="#000000"/>
+        android:textColor="#000000"
+        android:textSize="10dp" />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#f3f3f3"/>
+        android:background="#f3f3f3" />
 
 </LinearLayout>
