--- a/app/src/main/res/layout/custom_tab_view.xml
+++ b/app/src/main/res/layout/custom_tab_view.xml
@@ -1,29 +1,27 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- custom_tab_view.xml -->
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?><!-- custom_tab_view.xml -->
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:gravity="center">
+    android:gravity="center"
+    android:orientation="vertical">
 
     <ImageView
-        android:id="@+id/tab_icon"
+        android:id="@+id/tabIcon"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_marginBottom="4dp"
-        android:scaleType="fitCenter"/>
+        android:scaleType="fitCenter" />
 
     <TextView
-        android:id="@+id/tab_title"
+        android:id="@+id/tabTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:autoSizeTextType="uniform"
-        android:autoSizeMinTextSize="8sp"
         android:autoSizeMaxTextSize="20sp"
+        android:autoSizeMinTextSize="8sp"
         android:autoSizeStepGranularity="1sp"
+        android:autoSizeTextType="uniform"
+        android:gravity="center"
         android:singleLine="true"
-        android:textSize="12sp"
         android:textColor="#000000"
-        android:gravity="center"/>
+        android:textSize="12sp" />
 </LinearLayout>
