--- a/app/src/main/res/layout/flip_card.xml
+++ b/app/src/main/res/layout/flip_card.xml
@@ -66,77 +66,71 @@
             android:id="@+id/card1Copy"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="10dp"
             android:src="@drawable/card1"
-            android:layout_marginLeft="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/cl4Tv7"
-            />
+            app:layout_constraintTop_toBottomOf="@id/cl4Tv7" />
 
         <ImageView
             android:id="@+id/card1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="10dp"
             android:src="@drawable/card1"
-            android:layout_marginLeft="10dp"
             android:transitionName="transition_image"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/cl4Tv7"
-            />
+            app:layout_constraintTop_toBottomOf="@id/cl4Tv7" />
 
         <ImageView
             android:id="@+id/card2Copy"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
             android:layout_marginTop="8dp"
             android:src="@drawable/card1"
-            android:layout_marginLeft="10dp"
             android:transitionName="transition_image"
             app:layout_constraintLeft_toRightOf="@id/card1"
-            app:layout_constraintTop_toBottomOf="@id/cl4Tv7"
-            />
+            app:layout_constraintTop_toBottomOf="@id/cl4Tv7" />
 
         <ImageView
             android:id="@+id/card2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
             android:layout_marginTop="8dp"
             android:src="@drawable/card2"
-            android:layout_marginLeft="10dp"
             android:transitionName="transition_image"
             app:layout_constraintLeft_toRightOf="@id/card1"
-            app:layout_constraintTop_toBottomOf="@id/cl4Tv7"
-            />
+            app:layout_constraintTop_toBottomOf="@id/cl4Tv7" />
 
 
         <ImageView
             android:id="@+id/card3Copy"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
             android:layout_marginTop="8dp"
             android:src="@drawable/card1"
-            android:layout_marginLeft="10dp"
             android:transitionName="transition_image"
             app:layout_constraintLeft_toRightOf="@id/card2"
-            app:layout_constraintTop_toBottomOf="@id/cl4Tv7"
-            />
+            app:layout_constraintTop_toBottomOf="@id/cl4Tv7" />
 
         <ImageView
             android:id="@+id/card3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
             android:layout_marginTop="8dp"
             android:src="@drawable/card3"
-            android:layout_marginLeft="10dp"
             android:transitionName="transition_image"
             app:layout_constraintLeft_toRightOf="@id/card2"
-            app:layout_constraintTop_toBottomOf="@id/cl4Tv7"
-            />
+            app:layout_constraintTop_toBottomOf="@id/cl4Tv7" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
