--- a/app/src/main/res/layout/fourth.xml
+++ b/app/src/main/res/layout/fourth.xml
@@ -1,111 +1,104 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_marginBottom="10dp"
+    android:layout_height="wrap_content"
     android:layout_marginLeft="5dp"
     android:layout_marginRight="4dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/shape_rectangle19"
-    android:layout_height="wrap_content">
-
+    android:layout_marginBottom="10dp"
+    android:background="@drawable/shape_rectangle19">
 
     <ImageView
         android:id="@+id/ivImage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/falls1"
+        android:layout_marginBottom="10dp"
         android:adjustViewBounds="true"
         android:scaleType="fitXY"
-        android:layout_marginBottom="10dp"
+        android:src="@drawable/falls1"
+        app:layout_constraintBottom_toTopOf="@id/name"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/name"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/name"
         android:layout_width="136dp"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginBottom="9dp"
         android:text="加装【副卡】，一份套餐全家用"
         android:textColor="#333333"
         android:textSize="14sp"
         android:textStyle="bold"
-        android:layout_marginLeft="10dp"
-        android:layout_marginBottom="9dp"
-        app:layout_constraintTop_toBottomOf="@id/ivImage"
         app:layout_constraintBottom_toTopOf="@id/name2"
         app:layout_constraintLeft_toLeftOf="parent"
-            />
+        app:layout_constraintTop_toBottomOf="@id/ivImage" />
 
 
-        <TextView
-            android:id="@+id/name2"
-            android:layout_width="wrap_content"
-            android:layout_height="19dp"
-            android:layout_weight="1"
-            android:text="赠新人礼包"
-            android:gravity="center"
-            android:textColor="#ea5858"
-            android:textSize="11sp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginBottom="11dp"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp"
-            app:layout_constraintTop_toBottomOf="@id/name"
-            app:layout_constraintBottom_toTopOf="@id/name6"
-            app:layout_constraintLeft_toLeftOf="parent"
-            />
+    <TextView
+        android:id="@+id/name2"
+        android:layout_width="wrap_content"
+        android:layout_height="19dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginBottom="11dp"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:text="赠新人礼包"
+        android:textColor="#ea5858"
+        android:textSize="11sp"
+        app:layout_constraintBottom_toTopOf="@id/name6"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/name" />
 
-            <TextView
-                android:id="@+id/name3"
-                android:layout_width="wrap_content"
-                android:layout_height="19dp"
-                android:text="赠美团神券"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:textColor="#ea5858"
-                android:textSize="11sp"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp"
-                android:layout_marginLeft="5dp"
-                app:layout_constraintBottom_toBottomOf="@id/name2"
-                app:layout_constraintLeft_toRightOf="@id/name2"
-                />
+    <TextView
+        android:id="@+id/name3"
+        android:layout_width="wrap_content"
+        android:layout_height="19dp"
+        android:layout_marginLeft="5dp"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:text="赠美团神券"
+        android:textColor="#ea5858"
+        android:textSize="11sp"
+        app:layout_constraintBottom_toBottomOf="@id/name2"
+        app:layout_constraintLeft_toRightOf="@id/name2" />
 
 
-            <TextView
-                android:id="@+id/name4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#ea5858"
-                android:text="￥"
-                android:textSize="12sp"
-                app:layout_constraintBaseline_toBaselineOf="@id/name6"
-                app:layout_constraintLeft_toLeftOf="@id/name"
-                />
+    <TextView
+        android:id="@+id/name4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="￥"
+        android:textColor="#ea5858"
+        android:textSize="12sp"
+        app:layout_constraintBaseline_toBaselineOf="@id/name6"
+        app:layout_constraintLeft_toLeftOf="@id/name" />
 
-            <TextView
-                android:id="@+id/name5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#ea5858"
-                android:text="10"
-                android:textStyle="bold"
-                android:textSize="18sp"
-                app:layout_constraintBottom_toBottomOf="@id/name6"
-                app:layout_constraintLeft_toRightOf="@id/name4"
-                />
+    <TextView
+        android:id="@+id/name5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="10"
+        android:textColor="#ea5858"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="@id/name6"
+        app:layout_constraintLeft_toRightOf="@id/name4" />
 
-            <TextView
-                android:id="@+id/name6"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="#ea5858"
-                android:text="/月"
-                android:textSize="12sp"
-                android:layout_marginBottom="12dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/name2"
-                app:layout_constraintLeft_toRightOf="@id/name5"
-                />
+    <TextView
+        android:id="@+id/name6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="12dp"
+        android:text="/月"
+        android:textColor="#ea5858"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/name5"
+        app:layout_constraintTop_toBottomOf="@id/name2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
