--- a/app/src/main/res/layout/fragment_lab.xml
+++ b/app/src/main/res/layout/fragment_lab.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -10,20 +9,18 @@
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:background="#0099ff"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        >
+        app:layout_constraintTop_toTopOf="parent">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Lab"
-            android:layout_marginBottom="10dp"
             android:layout_gravity="center"
+            android:layout_marginBottom="10dp"
+            android:text="Lab"
             android:textColor="@color/white"
-            android:textSize="20sp"
-            />
-
+            android:textSize="20sp" />
     </androidx.appcompat.widget.Toolbar>
 
 
@@ -31,25 +28,24 @@
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        app:layout_constraintTop_toBottomOf="@id/toolbar" />
 
-        />
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/recyclerView"
-        android:paddingRight="10dp"
         android:paddingLeft="10dp"
-        app:layout_constraintLeft_toLeftOf="parent">
+        android:paddingRight="10dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/recyclerView">
 
         <com.example.myapplication.recharge.widget.ScratchCardView
             android:id="@+id/cl6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            app:layout_constraintTop_toTopOf="parent"
+            android:background="@drawable/shape_rectangle5"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:background="@drawable/shape_rectangle5"/>
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
