--- a/app/src/main/res/layout/helper.xml
+++ b/app/src/main/res/layout/helper.xml
@@ -1,34 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:background="@drawable/shape_rectangle6"
+    android:layout_height="wrap_content"
     android:layout_margin="10dp"
-    android:paddingLeft="10dp"
-    android:layout_height="wrap_content">
+    android:background="@drawable/shape_rectangle6"
+    android:orientation="vertical"
+    android:paddingLeft="10dp">
 
     <ImageView
         android:id="@+id/itemImage"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:src="@drawable/jetpack"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center"
+        android:src="@drawable/jetpack" />
 
     <TextView
         android:id="@+id/itemTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:singleLine="true"
-        android:maxLength="10"
         android:ellipsize="end"
+        android:maxLength="10"
+        android:singleLine="true"
         android:text="哇哈哈"
+        android:textColor="#000000"
         android:textSize="18dp"
-        android:textStyle="bold"
-        android:textColor="#000000"/>
+        android:textStyle="bold" />
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#f3f3f3"/>
+        android:background="#f3f3f3" />
 
 </LinearLayout>
