--- a/app/src/main/res/layout/image_view.xml
+++ b/app/src/main/res/layout/image_view.xml
@@ -1,28 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="97dp"
+    android:layout_height="98dp"
+    android:layout_marginRight="10dp"
     android:background="@drawable/square"
     android:gravity="center"
-    android:layout_marginRight="10dp"
-    android:layout_height="98dp">
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="50dp"
         android:layout_height="51dp"
-        android:orientation="vertical"
-        android:gravity="center"
-        android:background="@drawable/oval"
         android:layout_gravity="center"
-        >
+        android:background="@drawable/oval"
+        android:gravity="center"
+        android:orientation="vertical">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:gravity="left"
             android:text="翻"
             android:textColor="#fc5b1a"
             android:textSize="25sp"
-            android:textStyle="bold"
-            android:gravity="left"/>
+            android:textStyle="bold" />
     </LinearLayout>
 </LinearLayout>
