--- a/app/src/main/res/layout/lab.xml
+++ b/app/src/main/res/layout/lab.xml
@@ -1,33 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="100dp"
-    android:background="@drawable/shape_rectangle6"
+    android:layout_height="wrap_content"
     android:layout_margin="5dp"
+    android:background="@drawable/shape_rectangle6"
     android:gravity="center"
-    android:layout_height="wrap_content">
-
-
+    android:orientation="vertical">
 
     <ImageView
-            android:id="@+id/itemImage"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:src="@drawable/ic_canyin"
-            android:layout_gravity="center"/>
-
+        android:id="@+id/itemImage"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_gravity="center"
+        android:src="@drawable/ic_canyin" />
 
     <TextView
         android:id="@+id/itemTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:singleLine="true"
-        android:maxLength="10"
         android:ellipsize="end"
+        android:maxLength="10"
+        android:singleLine="true"
         android:text="雪碧"
+        android:textColor="#000000"
         android:textSize="18sp"
-        android:textStyle="bold"
-        android:textColor="#000000"/>
-
-
+        android:textStyle="bold" />
 </LinearLayout>
