--- a/app/src/main/res/layout/return_page.xml
+++ b/app/src/main/res/layout/return_page.xml
@@ -1,32 +1,30 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/fl">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fl"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <FrameLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </FrameLayout>
+        android:layout_height="match_parent"></FrameLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="300dp"
         android:layout_height="180dp"
         android:background="@drawable/shape_rectangle21"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        >
+        app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
             android:id="@+id/tv2Image"
             android:layout_width="15dp"
             android:layout_height="15dp"
-            android:layout_marginRight="13dp"
             android:layout_marginTop="10dp"
+            android:layout_marginRight="13dp"
             android:src="@drawable/close"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -34,48 +32,37 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="您真的要放弃全部优惠吗？"
             android:layout_marginTop="50dp"
+            android:text="您真的要放弃全部优惠吗？"
             android:textSize="18sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/text1"
             android:layout_width="130dp"
             android:layout_height="40dp"
-            android:text="放弃优惠"
-            android:gravity="center"
             android:layout_marginBottom="10dp"
             android:background="@drawable/shape_rectangle20"
+            android:gravity="center"
+            android:text="放弃优惠"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_chainStyle="spread"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toLeftOf="@id/text2"/>
+            app:layout_constraintRight_toLeftOf="@id/text2" />
 
         <TextView
             android:id="@+id/text2"
             android:layout_width="130dp"
             android:layout_height="40dp"
-            android:text="继续充值"
-            android:gravity="center"
-            android:textColor="@color/white"
             android:layout_marginBottom="10dp"
             android:background="@drawable/shape_rectangle22"
+            android:gravity="center"
+            android:text="继续充值"
+            android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toRightOf="@id/text1"
-            app:layout_constraintRight_toRightOf="parent"/>
-
-
+            app:layout_constraintRight_toRightOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
-
-
-
-
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
