--- a/app/src/main/res/layout/second.xml
+++ b/app/src/main/res/layout/second.xml
@@ -1,67 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="150dp"
+    android:layout_height="70dp"
     android:layout_marginRight="10dp"
     android:background="@drawable/shape_rectangle6"
-    android:layout_height="70dp">
+    android:orientation="vertical">
 
+    <TextView
+        android:id="@+id/name3"
+        android:layout_width="65dp"
+        android:layout_height="13dp"
+        android:gravity="center"
+        android:text="再得金豆可兑"
+        android:textColor="#ffffff"
+        android:textSize="9sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/name3"
-            android:layout_width="65dp"
-            android:layout_height="13dp"
-            android:gravity="center"
-            android:text="再得金豆可兑"
-            android:textColor="#ffffff"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:textSize="9sp" />
+    <ImageView
+        android:id="@+id/ivImage"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="13dp"
+        android:src="@drawable/tengxun"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
-            android:id="@+id/ivImage"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:src="@drawable/tengxun"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="13dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            />
+    <TextView
+        android:id="@+id/name"
+        android:layout_width="75dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:gravity="left"
+        android:text="腾讯视频会员周卡"
+        android:textColor="#333333"
+        android:textSize="12sp"
+        app:layout_constraintLeft_toRightOf="@id/ivImage"
+        app:layout_constraintTop_toTopOf="@id/ivImage" />
 
-        <TextView
-            android:id="@+id/name"
-            android:layout_width="75dp"
-            android:layout_height="wrap_content"
-            android:gravity="left"
-            android:text="腾讯视频会员周卡"
-            android:textColor="#333333"
-            android:textSize="12sp"
-            android:layout_marginLeft="10dp"
-            app:layout_constraintTop_toTopOf="@id/ivImage"
-            app:layout_constraintLeft_toRightOf="@id/ivImage"
-            />
+    <ImageView
+        android:id="@+id/image"
+        android:layout_width="13dp"
+        android:layout_height="13dp"
+        android:layout_marginLeft="9dp"
+        android:layout_marginTop="2dp"
+        android:src="@drawable/bean"
+        app:layout_constraintBottom_toBottomOf="@id/ivImage"
+        app:layout_constraintLeft_toRightOf="@id/ivImage" />
 
-        <ImageView
-            android:id="@+id/image"
-            android:layout_width="13dp"
-            android:layout_height="13dp"
-            android:layout_marginTop="2dp"
-            android:layout_marginLeft="9dp"
-            app:layout_constraintBottom_toBottomOf="@id/ivImage"
-            app:layout_constraintLeft_toRightOf="@id/ivImage"
-            android:src="@drawable/bean" />
-
-        <TextView
-            android:id="@+id/name2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="1000金豆"
-            android:textColor="#f3bb62"
-            android:textSize="12sp"
-            android:layout_marginLeft="2dp"
-            app:layout_constraintBottom_toBottomOf="@id/ivImage"
-            app:layout_constraintLeft_toRightOf="@id/image"
-            />
+    <TextView
+        android:id="@+id/name2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="2dp"
+        android:text="1000金豆"
+        android:textColor="#f3bb62"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toBottomOf="@id/ivImage"
+        app:layout_constraintLeft_toRightOf="@id/image" />
 </androidx.constraintlayout.widget.ConstraintLayout>
