--- a/app/src/main/res/layout/view_titlebar.xml
+++ b/app/src/main/res/layout/view_titlebar.xml
@@ -1,45 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="wrap_content"
+    android:id="@+id/rl"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:gravity="center"
-    android:id="@+id/rl">
+    android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/image"
-            android:layout_width="9dp"
-            android:layout_height="15dp"
-            android:layout_centerVertical="true"
-            android:src="@drawable/back"
-            />
+    <ImageView
+        android:id="@+id/image"
+        android:layout_width="9dp"
+        android:layout_height="15dp"
+        android:layout_centerVertical="true"
+        android:src="@drawable/back" />
 
-        <TextView
-            android:id="@+id/text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            android:layout_centerHorizontal="true"
-            />
+    <TextView
+        android:id="@+id/text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:gravity="center"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/rightText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:paddingRight="13dp"
-            android:textSize="16sp"
-            android:text="查询余额"
-            android:layout_alignParentRight="true"
-            />
+    <TextView
+        android:id="@+id/rightText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:gravity="center"
+        android:paddingRight="13dp"
+        android:text="查询余额"
+        android:textSize="16sp" />
 
-        <ImageView
-            android:id="@+id/image2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            />
-
-
+    <ImageView
+        android:id="@+id/image2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true" />
 </RelativeLayout>
